--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jorror Reponsive 404 Webpage</title>
+   
+    <link rel="shortcut icon" href="assets/img/ghost-img.png" type="image/x-icon">
 
                 <!-- BoxiCons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">    
