--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <!-- ScrollReveal -->
     
                 
-    <Script src="assets/js/scrollreveal.min.js"></Script>
+    <Script src="assets/js/scrollreveal.js"></Script>
 
                 <!-- Main JS -->
 
